[tool.poetry]
name = "RUSH Initiative Admin Site"
version = "0.1.0"
description = "Admin website for the RUSH Initiative"
authors = ["Samuel Morris <dodobird181@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE v3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.3"
django = "^5.1.7"
psycopg = {extras = ["binary"], version = "^3.2.6"}
django-summernote = "^0.8.20.0"
graphene-django = "^3.2.3"
django-simple-history = "^3.8.0"
pillow = "^11.1.0"
django-leaflet = "^0.31.0"
python-decouple = "^3.8"
django-colorfield = "^0.12.0"
requests = "^2.32.3"
jinja2 = "^3.1.6"
gunicorn = "^23.0.0"
dj-database-url = "^3.0.1"
django-cors-headers = "^4.9.0"
time-machine = "^2.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"

[tool.poetry.group.os_specific.dependencies]
gdal = "3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
